fix: vue 3 typescript errors

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
     "build": "quasar build",
+    "serve": "serve dist/spa -l 9005",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
@@ -101,6 +102,7 @@
     "eslint-plugin-promise": "^6.6.0",
     "eslint-plugin-vue": "^9.27.0",
     "mark.js": "^8.11.1",
+    "serve": "^14.2.4",
     "typescript": "~5.5.4",
     "unocss": "^0.62.3",
     "vite-plugin-checker": "^0.8.0",
