--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,12 @@
   "extends": "./.quasar/tsconfig.json",
   "exclude": [
     "./src-tauri"
-  ]
+  ],
+  "compilerOptions": {
+    "types": ["vite/client", "node"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  }
 }
