--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "@capawesome/capacitor-live-update": "^7.1.0",
     "@cfworker/json-schema": "^2.0.1",
     "@chenfengyuan/vue-qrcode": "^2.0.0",
+    "@cosmjs/amino": "^0.33.1",
+    "@cosmjs/cosmwasm-stargate": "^0.33.1",
+    "@cosmjs/stargate": "^0.33.1",
     "@gradio/client": "^1.7.1",
     "@lobehub/chat-plugin-sdk": "^1.32.4",
     "@material/material-color-utilities": "^0.3.0",
