feat: enhance Kepler wallet integration and add environment configuration
- Introduced new services for Kepler wallet and database management.
- Updated import paths for better organization and clarity.
- Added environment variables to .gitignore and Docker workflow for secure configuration.
- Enhanced CyberlinkResult component to utilize the new database service for message handling.
- Implemented a new plugin for Kepler wallet utilities to streamline wallet interactions.

--- a/.github/workflows/docker-web-dev.yml
+++ b/.github/workflows/docker-web-dev.yml
@@ -19,6 +19,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Create .env.docker
+        run: |
+          echo "DEXIE_DB_URL=${{ secrets.DEXIE_DB_URL }}" >> .env.docker
+
       - name: Build and push
         uses: docker/build-push-action@v6.10.0
         with:
