--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@chenfengyuan/vue-qrcode": "^2.0.0",
     "@cosmjs/amino": "^0.33.1",
     "@cosmjs/cosmwasm-stargate": "^0.33.1",
+    "@cosmjs/proto-signing": "^0.33.1",
     "@cosmjs/stargate": "^0.33.1",
     "@gradio/client": "^1.7.1",
     "@lobehub/chat-plugin-sdk": "^1.32.4",
