--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.ts,.vue ./",
-    "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
     "build": "quasar build",
     "serve": "serve dist/spa -l 9005",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
-    "sync-version": "node scripts/sync-version.js"
+    "sync-version": "node scripts/sync-version.js",
+    "test": "jest",
+    "supabase:types": "yarn supabase gen types typescript --project-id \"$PROJECT_ID\" --schema public > database.types.ts"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.1.13",
@@ -52,6 +53,7 @@
     "@openrouter/ai-sdk-provider": "^0.4.5",
     "@quasar/extras": "^1.16.12",
     "@sinclair/typebox": "^0.33.12",
+    "@supabase/supabase-js": "^2.49.4",
     "@tauri-apps/plugin-clipboard-manager": "~2.2.1",
     "@tauri-apps/plugin-opener": "~2.2.6",
     "@tauri-apps/plugin-os": "~2.2.0",
@@ -93,6 +95,7 @@
     "@intlify/unplugin-vue-i18n": "^2.0.0",
     "@quasar/app-vite": "^2.2.0",
     "@tauri-apps/cli": "^2.2.7",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.16.1",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
@@ -104,8 +107,11 @@
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.6.0",
     "eslint-plugin-vue": "^9.27.0",
+    "jest": "^29.7.0",
     "mark.js": "^8.11.1",
     "serve": "^14.2.4",
+    "supabase": ">=1.8.1",
+    "ts-jest": "^29.3.2",
     "typescript": "~5.5.4",
     "unocss": "^0.62.3",
     "vite-plugin-checker": "^0.8.0",
