feat: enhance Supabase integration and chat functionality
- Updated .gitignore to include new environment files for Supabase.
- Modified package.json to add a new command for exporting Supabase database schema.
- Enhanced GitHub Actions workflow to include Supabase environment variables.
- Removed deprecated chat schema SQL file and replaced it with a comprehensive Supabase schema.
- Improved chat components for better user experience, including user selection for private chats.
- Updated various UI elements for consistency and clarity in chat management.

--- a/.github/workflows/docker-web-dev.yml
+++ b/.github/workflows/docker-web-dev.yml
@@ -22,6 +22,8 @@ jobs:
       - name: Create .env.docker
         run: |
           echo "DEXIE_DB_URL=${{ secrets.DEXIE_DB_URL }}" >> .env.docker
+          echo "SUPABASE_URL=${{ secrets.SUPABASE_URL }}" >> .env.docker
+          echo "SUPABASE_KEY=${{ secrets.SUPABASE_KEY }}" >> .env.docker
 
       - name: Build and push
         uses: docker/build-push-action@v6.10.0
