--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "docs:preview": "vitepress preview docs",
     "sync-version": "node scripts/sync-version.js",
     "test": "jest",
-    "supabase:types": "supabase gen types typescript --project-id \"$PROJECT_ID\" --schema public > ./src/services/supabase/database.types.ts",
-    "supabase:export": "supabase db dump --data-only=false --file ./scripts/supabase_schema.sql"
+    "supabase:export-types:patch": "node scripts/generate-types.js",
+    "supabase:export-sql": "supabase db dump --data-only=false --file ./scripts/supabase_schema.sql"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.1.13",
