--- a/package.json
+++ b/package.json
@@ -129,8 +129,7 @@
   },
   "engines": {
     "node": "^24 || ^22 || ^20 || ^18",
-    "npm": ">= 6.13.4",
-    "yarn": ">= 1.21.1"
+    "npm": ">= 6.13.4"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
