--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@tauri-apps/plugin-os": "~2.2.0",
     "@tauri-apps/plugin-process": "~2.2.0",
     "@tauri-apps/plugin-shell": "~2.2.1",
+    "@tauri-apps/plugin-store": "^2.2.0",
     "@tauri-apps/plugin-updater": "~2.5.0",
     "@tauri-apps/plugin-window-state": "~2.2.1",
     "@vueuse/core": "^11.0.3",
