--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,12 +28,11 @@ tauri-plugin-os = "2"
 tauri-plugin-clipboard-manager = "2"
 tauri-plugin-process = "2"
 futures-util = "0.3.31"
-reqwest = "0.12.12"
+reqwest = { version = "0.12.12", features = ["json", "stream"] }
 bytes = { version = "1.10.0", features = ["serde"] }
 tauri-plugin-opener = "2"
 fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
 tauri-plugin-store = "2.2.0"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
-tauri-plugin-updater = "2.4.0"
 tauri-plugin-window-state = "2"
