feat: add dialog messages and message contents to Supabase schema
- Introduced new `dialog_messages` and `message_contents` tables in Supabase schema with appropriate constraints and relationships.
- Enhanced existing components to utilize the new dialog message structure, including updates to message handling and rendering logic.
- Updated relevant types and stores to support the new dialog message functionality, ensuring type safety and improved state management.
- Added policies for managing access to dialog messages and message contents, enhancing security and user interaction capabilities.

--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "html-to-image": "^1.11.13",
     "json-schema": "^0.4.0",
     "liquidjs": "^10.16.7",
+    "lodash": "^4.17.21",
     "markdown-it-footnote": "^4.0.0",
     "markdown-it-link-attributes": "^4.0.1",
     "md-editor-v3": "^5.4.5",
@@ -97,6 +98,7 @@
     "@quasar/app-vite": "^2.2.0",
     "@tauri-apps/cli": "^2.2.7",
     "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20.16.1",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
