--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "md-editor-v3": "^5.4.5",
     "ollama-ai-provider": "^1.2.0",
     "pinia": "^2.2.2",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "quasar": "^2.18.1",
     "register-service-worker": "^1.7.2",
     "vue": "^3.5.12",
