feat: enhance file handling and storage integration
- Added `file-type` dependency for improved file type detection.
- Refactored components to utilize new storage utilities for file URL generation.
- Updated message components to handle file URLs instead of content buffers, enhancing performance and clarity.
- Improved type definitions for stored items to support new file handling logic.
- Enhanced dialog and message management to streamline file interactions and improve user experience.

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "dexie-export-import": "^4.1.4",
     "eventsource": "^3.0.6",
     "expr-eval": "^2.0.2",
+    "file-type": "^20.5.0",
     "html-to-image": "^1.11.13",
     "json-schema": "^0.4.0",
     "liquidjs": "^10.16.7",
