Feat ws and dialogs supabase (#5)
* refactor: update ESLint configuration and enhance Supabase integration

- Disabled quotes and comma-dangle rules in ESLint for improved flexibility in code style.
- Introduced a new script for generating Supabase types and updated the export command for SQL schema.
- Added multiple new functions in the Supabase schema for workspace management and user interactions.
- Refactored components to utilize updated user and workspace stores for better state management and clarity.

* refactor: enhance assistant management and update Supabase integration

- Added new functions in the Supabase schema for managing user assistants, including triggers for setting user IDs on insert.
- Updated the ESLint configuration to disable camelcase rules for improved flexibility in code style.
- Refactored components to utilize the new assistant store and updated data structures for better state management.
- Improved the handling of assistant properties in various components, ensuring consistency with the new Supabase schema.
- Removed deprecated broadcast_messages table and related policies from the Supabase schema.

* refactor: enhance chat functionality and update component structure

- Updated the Json type definition in Supabase types to support arrays.
- Refactored chat-related components to improve state management and user experience.
- Introduced new chat message handling logic with subscriptions for real-time updates.
- Removed deprecated components and streamlined imports for better clarity.
- Enhanced workspace and chat management functionalities with new composables and stores.

* feat: add dialogs functionality and enhance avatar management

- Introduced new `dialogs` table in Supabase schema with associated triggers and policies for user interactions.
- Implemented `set_dialog_user_id` function to automatically assign user IDs and timestamps on dialog creation.
- Updated avatar components to support image uploads and deletions, ensuring p

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "docs:preview": "vitepress preview docs",
     "sync-version": "node scripts/sync-version.js",
     "test": "jest",
-    "supabase:types": "supabase gen types typescript --project-id \"$PROJECT_ID\" --schema public > ./src/services/supabase/database.types.ts",
-    "supabase:export": "supabase db dump --data-only=false --file ./scripts/supabase_schema.sql"
+    "supabase:export-types:patch": "node scripts/generate-types.js",
+    "supabase:export-sql": "supabase db dump --data-only=false --file ./scripts/supabase_schema.sql"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.1.13",
@@ -74,9 +74,11 @@
     "dexie-export-import": "^4.1.4",
     "eventsource": "^3.0.6",
     "expr-eval": "^2.0.2",
+    "file-type": "^20.5.0",
     "html-to-image": "^1.11.13",
     "json-schema": "^0.4.0",
     "liquidjs": "^10.16.7",
+    "lodash": "^4.17.21",
     "markdown-it-footnote": "^4.0.0",
     "markdown-it-link-attributes": "^4.0.1",
     "md-editor-v3": "^5.4.5",
@@ -97,6 +99,7 @@
     "@quasar/app-vite": "^2.2.0",
     "@tauri-apps/cli": "^2.2.7",
     "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20.16.1",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
