chore: update ESLint configuration and clean up code
- Changed the ESLint rule for `space-before-function-paren` from "warn" to "off".
- Updated the `eslint:fix` script in `package.json` to target the current directory instead of just the `src` folder.
- Added a blank line in `uno.config.ts` for better readability.
- Removed unused code and comments in `ViewCommonHeader.vue`, `useUserLoginCallback.ts`, `plugins.ts`, and `SettingsView.vue` to enhance code clarity.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "jest",
     "supabase:export-types:patch": "node scripts/generate-types.js",
     "supabase:export-sql": "supabase db dump --data-only=false --file ./scripts/supabase_schema.sql",
-    "eslint:fix": "eslint --ext .ts,.js,.vue src --fix"
+    "eslint:fix": "eslint --ext .ts,.js,.vue . --fix"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.1.13",
