feat(storybook): add storybook

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "supabase:export-types:patch": "node scripts/generate-types.js",
     "supabase:export-sql": "supabase db dump --data-only=false --file ./scripts/supabase_schema.sql",
     "eslint:fix": "eslint --ext .ts,.js,.vue . --fix",
-    "migrate:all": "npx tsx scripts/migrate_messages_tree.ts"
+    "migrate:all": "npx tsx scripts/migrate_messages_tree.ts",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.1.13",
@@ -98,6 +100,13 @@
     "@capacitor/cli": "^7.0.1",
     "@intlify/unplugin-vue-i18n": "^2.0.0",
     "@quasar/app-vite": "^2.2.0",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/addon-onboarding": "8.6.14",
+    "@storybook/blocks": "^8.6.14",
+    "@storybook/test": "^8.6.14",
+    "@storybook/vue3": "8.6.14",
+    "@storybook/vue3-vite": "8.6.14",
     "@tauri-apps/cli": "^2.2.7",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
@@ -111,11 +120,15 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.6.0",
+    "eslint-plugin-storybook": "^9.0.8",
     "eslint-plugin-unused-imports": "^4.1.4",
     "eslint-plugin-vue": "^9.27.0",
     "jest": "^29.7.0",
     "mark.js": "^8.11.1",
     "serve": "^14.2.4",
+    "storybook": "8.6.14",
+    "storybook-dark-mode": "4.0.2",
+    "storybook-vue3-router": "^5.0.0",
     "supabase": ">=1.8.1",
     "ts-jest": "^29.3.2",
     "tsx": "^4.19.4",
