refact: refactoring phase 6

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,10 @@
     "types": ["vite/client", "node", "jest"],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@features/*": ["./src/features/*"],
+      "@shared/*": ["./src/shared/*"],
+      "@services/*": ["./src/services/*"]
     }
   }
 }
