--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,8 @@
     "editor.defaultFormatter": "vscode.css-language-features"
   },
   "rust-analyzer.initializeStopped": true,
-  "java.server.launchMode": "LightWeight"
+  "java.server.launchMode": "LightWeight",
+  "[typescript]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  }
 }
